# wayland-fifo-test-client

./: Cargo.toml  fifo-v1.xml
src/: main.rs
